--- a/src/Layouts/MainLayout/MainHeader/MainHeader.scss
+++ b/src/Layouts/MainLayout/MainHeader/MainHeader.scss
@@ -28,8 +28,11 @@
         }
       }
     }
-    
-    
+
+    .MainHeader__homeIcon {
+      margin-top: -7px;
+      font-size: large;
+    }
   }
 
 }
