--- a/src/Layouts/AdminLayout/AdminHeader/AdminHeader.scss
+++ b/src/Layouts/AdminLayout/AdminHeader/AdminHeader.scss
@@ -9,7 +9,7 @@
       text-decoration: none;
       padding: 20px;
       padding-bottom: 10px;
-      
+
       @media screen and(max-width: 992px) {
         padding: 20px;
         padding-bottom: 10px;
@@ -28,8 +28,10 @@
         }
       }
     }
-    
-    
-  }
 
+    .MainHeader__homeIcon {
+      margin-top: -7px;
+      font-size: large;
+    }
+  }
 }
