--- a/src/Pages/SecurePages/AdminMain/AdminMain.scss
+++ b/src/Pages/SecurePages/AdminMain/AdminMain.scss
@@ -1,3 +1,18 @@
 .AdminMain {
-  
+  padding-top: 20px !important;
+
+  .AdminMain__buttonCont {
+    width: 40%;
+  }
+
+  a {
+    text-decoration: none;
+    color: #ffffff;
+  }
+
+  .ButtonComponent {
+    margin-bottom: 10px;
+    border-radius: 3px;
+    box-shadow: #000000 2px 2px 5px;
+  }
 }
