--- a/src/Pages/SecurePages/Privileges/Privileges.scss
+++ b/src/Pages/SecurePages/Privileges/Privileges.scss
@@ -1,3 +1,30 @@
 .Privileges {
-  
+  padding: 20px;
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+
+  .Privileges__loader {
+    width: 100%;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+  }
+
+  .Privileges__user {
+    border: 2px #000e74 solid;
+    border-radius: 2px;
+    padding: 5px;
+    margin-bottom: 5px;
+    background-color: #c1d5df;
+
+    .Privileges__block {
+      padding: 5px;
+      padding-right: 20px;
+      font-size: 14px;
+    }
+  }
 }
