--- a/src/Pages/SecurePages/Users/Users.scss
+++ b/src/Pages/SecurePages/Users/Users.scss
@@ -1,4 +1,5 @@
 .Users {
+  padding: 20px;
   width: 100%;
   min-height: 100%;
   display: flex;
@@ -17,6 +18,8 @@
     border: 2px #000e74 solid;
     border-radius: 2px;
     padding: 5px;
+    margin-bottom: 5px;
+    background-color: #c1d5df;
 
     .Users__block {
       padding: 5px;
